# claw10

./: .gitignore  Cargo.toml  README.md  TXT.txt  clippy_fix.sh  commit_message.txt  contoh_tugas_test.md  install.ps1  install.sh  publish.sh  session-ses_0f83.md  uninstall.sh  update.sh  vector.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml  release.yml
assets/: clawhive-gold-gradient.ans  clawhive.txt
crates/claw10-agent/: Cargo.toml  README.md
crates/claw10-agent/src/: context.rs  events.rs  executor.rs  lib.rs  runtime.rs  runtime_test.rs  self_correct.rs  self_correct_test.rs  store.rs
crates/claw10-artifact/: Cargo.toml  README.md
crates/claw10-artifact/src/: lib.rs
crates/claw10-auth/: Cargo.toml  README.md
crates/claw10-auth/src/: lib_test.rs  rbac.rs  rbac_test.rs
crates/claw10-budget/: Cargo.toml  README.md
crates/claw10-budget/src/: lib_test.rs
crates/claw10-cli/: Cargo.toml  README.md
crates/claw10-cli/src/: main.rs  service.rs  setup.rs  setup_wizard.rs  telemetry_layer.rs  update.rs
crates/claw10-context/: Cargo.toml  README.md
crates/claw10-context/src/: lib.rs
crates/claw10-control-api/: Cargo.toml  README.md
crates/claw10-control-api/src/: lib.rs  state.rs  telegram_poller.rs
crates/claw10-domain/: Cargo.toml  README.md
crates/claw10-domain/src/: agent.rs  spawn.rs  workspace.rs
crates/claw10-event/: Cargo.toml  README.md
crates/claw10-event/src/: bus.rs  nats.rs
crates/claw10-gateway/: Cargo.toml  README.md
crates/claw10-gateway/src/: lib.rs
crates/claw10-icvs/: Cargo.toml  README.md
crates/claw10-icvs/benches/: compiler_bench.rs
crates/claw10-icvs/src/: lib.rs
crates/claw10-lifecycle/: Cargo.toml  README.md
crates/claw10-lifecycle/src/: lib.rs
crates/claw10-lineage/: Cargo.toml  README.md
crates/claw10-lineage/src/: lib.rs  lib_test.rs
crates/claw10-memory/: Cargo.toml  README.md
crates/claw10-memory/src/: admission.rs  admission_test.rs
crates/claw10-mission/: Cargo.toml  README.md
crates/claw10-mission/src/: lib.rs  lib_test.rs
crates/claw10-model-router/: Cargo.toml  README.md
crates/claw10-model-router/benches/: provider_bench.rs
crates/claw10-model-router/models/: nvidia.rs
crates/claw10-model-router/src/: config.rs  config_test.rs  lib.rs  models_dev.rs  models_dev_test.rs  openai_compat.rs  provider.rs  providers.rs  router.rs  router_test.rs  types.rs
crates/claw10-policy/: Cargo.toml  README.md
crates/claw10-policy/src/: lib.rs  lib_test.rs
crates/claw10-prompt/: Cargo.toml  README.md
crates/claw10-prompt/src/: assembler.rs  assembler_test.rs  bundle.rs  lib_test.rs  registry.rs  registry_test.rs  (+1 more)
crates/claw10-scheduler/: Cargo.toml  README.md
crates/claw10-skill/: Cargo.toml  README.md
crates/claw10-spawn/: Cargo.toml  README.md
crates/claw10-store/: Cargo.toml  README.md
crates/claw10-task/: Cargo.toml  README.md
crates/claw10-telemetry/: Cargo.toml  README.md
crates/claw10-telemetry/src/: lib.rs
crates/claw10-tool/: Cargo.toml  README.md
crates/claw10-tool/src/: builtin.rs  registry.rs  registry_test.rs
crates/claw10-tool/src/builtin/: artifact.rs  browser.rs  input.rs  input_test.rs  process.rs  process_test.rs  screenshot.rs  screenshot_test.rs  shell.rs  shell_test.rs  window.rs  window_test.rs
crates/claw10-toon/: Cargo.toml  README.md
crates/claw10-toon/src/: lib.rs  lib_test.rs
crates/claw10-tui/: Cargo.toml  README.md
crates/claw10-worker/: Cargo.toml  README.md
crates/clawhive-agent/: Cargo.toml
crates/clawhive-agent/src/: context.rs  error.rs  events.rs  executor.rs  lib.rs  runtime.rs  session.rs  store.rs  store_test.rs
crates/clawhive-artifact/: Cargo.toml
crates/clawhive-artifact/src/: lib.rs  lib_test.rs
crates/clawhive-audit/: Cargo.toml
crates/clawhive-auth/: Cargo.toml
crates/clawhive-auth/src/: credential.rs  error.rs  identity.rs  lib.rs  rbac.rs
crates/clawhive-budget/: Cargo.toml
crates/clawhive-cli/: Cargo.toml
crates/clawhive-context/: Cargo.toml
crates/clawhive-context/src/: lib.rs  lib_test.rs
crates/clawhive-control-api/: Cargo.toml
crates/clawhive-control-api/src/: error.rs  handlers.rs  lib.rs  router.rs  state.rs
crates/clawhive-control-api/src/handlers/: agent.rs  approval.rs  artifact.rs  audit.rs  health.rs  lifecycle.rs  lineage.rs  memory.rs  mission.rs  policy.rs  skill.rs  spawn.rs  task.rs  worker.rs
crates/clawhive-domain/: Cargo.toml
crates/clawhive-event/: Cargo.toml
crates/clawhive-event/src/: bus.rs  events.rs  inmemory.rs  inmemory_test.rs  lib.rs  nats.rs  nats_test.rs
crates/clawhive-gateway/: Cargo.toml
crates/clawhive-gateway/src/: lib.rs
crates/clawhive-icvs/: Cargo.toml
crates/clawhive-lifecycle/: Cargo.toml
crates/clawhive-lineage/: Cargo.toml
crates/clawhive-memory/: Cargo.toml
crates/clawhive-mission/: Cargo.toml
crates/clawhive-model-router/: Cargo.toml
crates/clawhive-organization/: Cargo.toml
crates/clawhive-policy/: Cargo.toml
crates/clawhive-scheduler/: Cargo.toml
crates/clawhive-scheduler/src/: lib.rs
crates/clawhive-skill/: Cargo.toml
crates/clawhive-skill/src/: lib.rs  lib_test.rs
crates/clawhive-spawn/: Cargo.toml
crates/clawhive-spawn/src/: broker.rs  lib.rs  validator.rs
crates/clawhive-store/: Cargo.toml
crates/clawhive-task/: Cargo.toml
crates/clawhive-telemetry/: Cargo.toml
crates/clawhive-tool/: Cargo.toml
crates/clawhive-tool/src/: builtin.rs  context.rs  lib.rs  registry.rs  result.rs
crates/clawhive-tool/src/builtin/: filesystem.rs  http.rs  shell.rs
crates/clawhive-toon/: Cargo.toml
crates/clawhive-tui/: Cargo.toml
crates/clawhive-worker/: Cargo.toml
crates/clawhive-worker/src/: lib.rs
doc/: BIG_PLAN.md  Crates.md  agent_swarm.md  architecture.md  bug_catalog.md  features.md  prd.md  technical_specs.md
migrations/: 001_initial.sql
models/: mappings.json  nvidia.json  openrouter.json
tests/: Cargo.toml
tests/tests/: e2e_http_api.rs  e2e_spawn_approve_lifecycle.rs  e2e_tool_integration.rs  gateway_webhook_agent.rs  lifecycle.rs  real_api_test.rs  spawn.rs
(+102 files in other folders)
