[package]
name = "claw10-tool"
version.workspace = true
edition = "2024"
description = "Tool registry and built-in tools for Claw10 agents"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-domain = { workspace = true }
claw10-store = { workspace = true }
claw10-artifact = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["connect"] }
futures-util = "0.3"
reqwest = { workspace = true }
base64 = { workspace = true }
tempfile = "3.10.1"


[dev-dependencies]
