[package]
name = "clawhive-agent"
version.workspace = true
edition = "2024"

[dependencies]
clawhive-domain = { path = "../clawhive-domain" }
clawhive-tool = { path = "../clawhive-tool" }
clawhive-model-router = { path = "../clawhive-model-router" }
clawhive-budget = { path = "../clawhive-budget" }
clawhive-lifecycle = { path = "../clawhive-lifecycle" }
clawhive-store = { path = "../clawhive-store" }
clawhive-policy = { path = "../clawhive-policy" }
clawhive-worker = { path = "../clawhive-worker" }
clawhive-prompt = { path = "../clawhive-prompt" }
clawhive-context = { path = "../clawhive-context" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
