[package]
name = "clawhive-auth"
version.workspace = true
edition = "2024"

[dependencies]
clawhive-domain = { path = "../clawhive-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
