[package]
name = "clawhive-scheduler"
version.workspace = true
edition = "2024"

[dependencies]
clawhive-domain = { path = "../clawhive-domain" }
clawhive-store = { path = "../clawhive-store" }
async-trait = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
