[package]
name = "clawhive-skill"
version.workspace = true
edition = "2024"

[dependencies]
clawhive-domain = { path = "../clawhive-domain" }
clawhive-store = { path = "../clawhive-store" }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
